<resources>
    <string name="app_name">Kotline</string>
    <string name="logo_kotline">Logo Kotline</string>
    <string name="dishub">Dinas Perhubungan\nKabupaten Banjarnegara</string>
    <string name="logo_dishub">Logo Dishub</string>
    <string name="powered_by">Powered by</string>
    <string name="realtime_position">Realtime Position</string>
    <string name="description_onboarding_one">Lihat keberadaan angkutan kota yang ada disekitarmu secara langsung hanya melalui smartphone.</string>
    <string name="rute_information">Rute Information</string>
    <string name="description_onboarding_two">Dapatkan informasi terkait rute yang dilewati oleh angkutan kota.</string>
    <string name="let_s_go">Let\'s Go!</string>
    <string name="description_onboarding_three">Klik Mulai untuk mulai menggunakan aplikasi.</string>
    <string name="get_started">Mulai</string>
    <string name="image_option">Image Option</string>
    <string name="login_as">Masuk sebagai</string>
    <string name="driver">Driver</string>
    <string name="customer">Customer</string>
    <string name="image_driver">Image Driver</string>
    <string name="go">Berangkat!</string>
    <string name="description_login_driver">Kini Mendapatkan Penumpang Jauh Lebih Mudah.</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_email">Continue with Email</string>
    <string name="register_with_email">Register with Email</string>
    <string name="image_angkot">Image Angkot</string>
    <string name="come_on">Ayo Naik Angkot!</string>
    <string name="description_login_customer">Kini Naik Angkot Semakin Praktis dan Mudah.</string>
    <string name="image_button_arrow_back">Image Button Arrow Back</string>
    <string name="create_new_account">Create new account</string>
    <string name="first_name">Nama Depan</string>
    <string name="last_name">Nama Belakang</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="ready_member">I\'am already a member.</string>
    <string name="sign_in">Sign In</string>
    <string name="new_user">I\'am a new user.</string>
    <string name="welcome_back">Welcome back</string>
    <string name="register_successfully">Register Berhasil!</string>
    <string name="please_login">silahkan login!</string>
    <string name="ok">OK</string>
    <string name="wait_for_verification">harap tunggu verifikasi!</string>
    <string name="account_is_not_registered">Akun kamu belum terdaftar!</string>
    <string name="account_is_not_verification">Akun kamu belum diverifikasi!</string>
    <string name="logout">Logout</string>
    <string name="search_angkot">Cari Angkot</string>
    <string name="getting_your_angkot">Mendapatkan angkot…</string>
    <string name="looking_for_angkot_location">Mencari lokasi angkot…</string>
    <string name="angkot_found">Angkot ditemukan. Klik untuk membatalkan.</string>
    <string name="angkot_to_your_location">Angkot menuju ke lokasimu.</string>
    <string name="angkot_here">Angkot here</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="customersHistory">History</string>
    <string name="profile">Profile</string>
    <string name="trayek_information">Trayek Information</string>
    <string name="are_you_sure">Apakah anda yakin ingin keluar?</string>
    <string name="my_profile">My Profile</string>
    <string name="name">Nama</string>
    <string name="phone">Nomor telepon</string>
    <string name="birth_date">Tanggal Lahir</string>
    <string name="male">Pria</string>
    <string name="female">Wanita</string>
    <string name="save">Save</string>
    <string name="saving_success">Berhasil menyimpan data!</string>
    <string name="saving_failed">Gagal menyimpan data!</string>
    <string name="gender_title">Jenis Kelamin</string>
    <string name="phone_number_title">Nomor Telepon :</string>
    <string name="message_title">Pesan :</string>
    <string name="destination_title">Tempat Tujuan :</string>
    <string name="vehicle_plate_title">Plat Nomor Kendaraan :</string>
    <string name="address_title">Alamat Tujuan :</string>
    <string name="no_name">Tidak ada nama.</string>
    <string name="no_email">Tidak ada email.</string>
    <string name="no_phone_number">Tidak ada nomor telepon.</string>
    <string name="no_birth_date">Tidak ada tanggal lahir.</string>
    <string name="no_destination">Tidak ada tempat tujuan.</string>
    <string name="no_message">Tidak ada pesan.</string>
    <string name="no_vehicle_plate">Belum ada plat nomor.</string>
    <string name="no_orders">Belum ada orderan.</string>
    <string name="havent_ordered_yet">Belum melakukan order.</string>
    <string name="please_provide_permission">Please provide the permission.</string>
    <string name="leave_the_app">Press back again to leave the app.</string>
    <string name="no_address">Tidak ada alamat tujuan.</string>
    <string name="vehicle_license_plate">Plat nomor kendaraan</string>
    <string name="enter_message">Masukkan pesan</string>
    <string name="trayek">Trayek</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="picked_customer">Ambil penumpang.</string>
    <string name="drive_completed">Angkot tiba di lokasi.</string>
    <string name="my_history">My History</string>
    <string name="driver_name">Nama Supir :</string>
    <string name="customer_name">Nama Penumpang :</string>
    <string name="no_order_history">Belum terdapat riwayat pemesanan</string>
    <string name="no_transport_history">Belum terdapat riwayat pengangkutan</string>
    <string name="data_driver">Data Supir :</string>
    <string name="data_customer">Data penumpang :</string>
    <string name="recommendation_not_found">Tidak tersedia.</string>
    <string name="angkot_current_recommendation">Rekomendasi angkot saat ini :</string>
    <string name="angkot_next_recommendation">Rekomendasi angkot selanjutnya :</string>
    <string name="driver_rating">Rating supir :</string>
    <string name="your_rating">Rating kamu :</string>
    <string name="working">Working</string>
    <string name="transportation_number">No angkutan</string>


    <string name="default_web_client_id_auth">909422598945-uoq0qscpahjdfeut6v5fsq1cth6rmimh.apps.googleusercontent.com</string>
    <string name="angkot_a">Angkot A</string>
    <string name="angkot_b">Angkot B</string>
    <string name="angkot_c">Angkot C</string>
    <string name="angkot_d">Angkot D</string>
    <string name="ngetem">Ngetem</string>
    <string name="tarif">Tarif</string>
    <string name="description">Deskripsi</string>

    <string name="good_morning">Selamat pagi</string>
    <string name="good_afternoon">Selamat siang</string>
    <string name="good_evening">Selamat malam</string>

    <string name="messageMail">Halo %1$s,\nSemoga tetap semangat dan sehat selalu ya!\nKami dari pihak Dinas Perhubungan Kabupaten Banjarnegara menginformasikan bahwa untuk keperluan verifikasi akun driver Bapak/Ibu diharapkan datang ke kantor kami yang ada berada di Jl. Serulingmas No.1, Semampir, Kec. Banjarnegara, Kab. Banjarnegara, Jawa Tengah 53418. Berikut berkas yang perlu Bapak/Ibu bawa :\n1. BPKB Angkutan Pedesaan\n2. STNK Angkutan Pedesaan\n3. SIM A Umum\nKami tunggu kehadiran Bapak/Ibu untuk bergabung dengan Kotline! :)</string>
    <string name="subjectMail">Verifikasi Akun Driver</string>

    <string name="driver_not_found">Driver tidak ditemukan.</string>
    <string name="transit_location">Lokasi Transit :</string>

    <string name="empty_route">Trayek kosong.</string>
    <string name="empty_location">Lokasi kosong.</string>
    <string name="empty_fares">Tarif kosong.</string>
    <string name="empty_description">Deskripsi kosong.</string>
    <string name="title_activity_detail_route_information">DetailRouteInformationActivity</string>
    <string name="reject">Tolak</string>
</resources>