<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="15dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_animation_success"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/animation_success" />

        <TextView
            android:id="@+id/tv_title_custom_alert_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lottie_animation_success"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/register_successfully"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_please_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_title_custom_alert_dialog"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/please_login"
            android:textSize="17sp" />

        <Button
            android:id="@+id/btn_login_ok"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_below="@id/tv_please_login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:background="@drawable/custom_button_blue"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/ok" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>